# CLI-team_project

./: pyproject.toml
cli_assistant/: address_book_classes.py  assistant.py  clean_folder.py  currency.py  exceptions.py  help_invite.py  main_information.py  note_book_classes.py  task_list_classes.py
